--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
   "license": "MIT",
   "devDependencies": {
     "wix-web-build": "latest"
+  },
+  "dependencies": {
+    "babel-preset-react": "^6.5.0",
+    "react": "^15.0.2",
+    "react-addons-test-utils": "^15.0.2",
+    "react-dom": "^15.0.2"
   }
 }
